Implementación del servicio 's3' de AWS para la administración de imágenes.
- Se añadió una nueva librería: requiere[ composer install ]

- Creación de un controlador para las fotos.

- los nuevos usuarios tendran una foto por defecto que ya está en la nube de AWS

- Nueva ruta API:
     - [POST] api/photo/upload: requiere[photo, usuario autenticado y validado]
